added unit tests and mockk integration